# NHSMM

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
nhsmm/: __init__.py  constants.py  context.py  default.py  defaults.py  emissions.py  modules.py
nhsmm/distributions/: NeuralDuration.py  NeuralEmission.py  NeuralTransition.py  __init__.py  neural.py
nhsmm/models/: NeuralHSMM.py  __init__.py  base.py  gaussian.py  hsmm.py  neural.py
nhsmm/tools/: constraints.py  convergence.py  loader.py  seed.py  utils.py
nhsmm/utilities/: __init__.py  constraints.py  convergence.py  encoder.py  loader.py  seed.py  utils.py
tests/: gaussian.py  main.py  neural.py  simple.py  tune.py
