[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhsmm"
version = "0.1.0"
description = "Neural Hidden Semi-Markov Model (HSMM) implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["HSMM", "Neural HSMM", "PyTorch", "sequence modeling", "temporal modeling"]
authors = [
    { name = "AWA", email = "your-email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: PyTorch",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "optuna>=3.0",
]

[project.urls]
Homepage = "https://github.com/awwea/NeuralHSMM"
Repository = "https://github.com/awwea/NeuralHSMM"
